Change button color to green

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <label for="comment" class="form-label">Komentar</label>
                 <textarea name="comment" class="form-control" id="Komentar" cols="30" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-succes">Kirim</button>
             </form>
           </div>
         </div>
